objects/Partner_Agreement__c.object
<CustomObject><fields>
        <fullName>Account_Location__c</fullName>
        <description>cross object formula that pulls the location from the related Account (OOTB Account Site field, label changed to Location)</description>
        <formula>Account__r.Site</formula>
        <inlineHelpText>Location of the related account.  Note if no account is related to the Agreement, this field will be blank.</inlineHelpText>
        <label>Account Location</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_Name_Latin__c</fullName>
        <formula>Account__r.Account_Name_Latin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name (Latin)</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Agreements</relationshipLabel>
        <relationshipName>Partner_Agreements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Action_Date__c</fullName>
        <description>Represents a specific action on an agreement, creating for future use, do not add to page layout</description>
        <label>Action Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Agreement_Application__c</fullName>
        <description>Used to capture the body of a submitted agreement (processed via the email handler)</description>
        <inlineHelpText>Used to capture the body of a submitted agreement (processed via the email handler)</inlineHelpText>
        <label>Agreement Application</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Agreement_Status_Updated__c</fullName>
        <description>the date/time when the last Agreement Status was changed</description>
        <label>Agreement Status Updated</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Applications</fullName>
                </value>
                <value>
                    <fullName>Communications Systems</fullName>
                </value>
                <value>
                    <fullName>Computational Biology</fullName>
                </value>
                <value>
                    <fullName>Computational Finance</fullName>
                </value>
                <value>
                    <fullName>Control Systems</fullName>
                </value>
                <value>
                    <fullName>Digital Signal Processing</fullName>
                </value>
                <value>
                    <fullName>Embedded Systems</fullName>
                </value>
                <value>
                    <fullName>FPGA Design</fullName>
                </value>
                <value>
                    <fullName>Image Processing &amp; Comp Vision</fullName>
                </value>
                <value>
                    <fullName>Mechatronics</fullName>
                </value>
                <value>
                    <fullName>Technical Computing</fullName>
                </value>
                <value>
                    <fullName>Test and Measurement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>CMS_ID__c</fullName>
        <description>allows users to free text the CMS ID related to the agreement</description>
        <label>CMS ID</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Class__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Managed</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>Connections</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Class__c</fullName>
        <description>Captures the class of the agreement, dependent on Type</description>
        <inlineHelpText>Captures the class of the agreement, dependent on Type</inlineHelpText>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Local Office</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>RTS</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>VAR</fullName>
                </value>
                <value>
                    <fullName>VARI</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Sales Support</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Regression Testing</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Interface Devel Needs</fullName>
                </value>
                <value>
                    <fullName>Interface Mtkg Needs</fullName>
                </value>
                <value>
                    <fullName>MathWorks Product Devel Support</fullName>
                </value>
                <value>
                    <fullName>MathWorks Vendor - Need Software per Contract</fullName>
                </value>
                <value>
                    <fullName>Platform Vendor</fullName>
                </value>
                <value>
                    <fullName>Retired MathWorks Customer or Employee</fullName>
                </value>
                <value>
                    <fullName>Support Key Externally-Driven Project</fullName>
                </value>
                <value>
                    <fullName>Toolbox/Code Author</fullName>
                </value>
                <value>
                    <fullName>Interface Devel and Mktg Needs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Days_From_Start_Date__c</fullName>
        <formula>((DATEVALUE(NOW())- Start_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Start Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Denied_Prohibited__c</fullName>
        <description>Denotes if the related account has a denied prohibited flag on it.</description>
        <formula>Account__r.Denied_Prohibited_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reflects the denied/prohibited status of the related account.  If there is no account related to the agreement this will be blank.</inlineHelpText>
        <label>Denied/Prohibited</label>
        <type>Text</type>
    </fields><fields>
        <fullName>E2AEmailCount__c</fullName>
        <description>This field store the count of e2a email which has status as new</description>
        <label>E2AEmailCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <description>Date partner was removed from the program</description>
        <inlineHelpText>Date partner was removed from the program</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Extended_End_Date__c</fullName>
        <description>date of license maintenance end date, used for no charge only</description>
        <inlineHelpText>Date of license maintenance end.  Used for No Charge agreements only</inlineHelpText>
        <label>Extended End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Final_Approval_Date__c</fullName>
        <description>date partner went active in the program</description>
        <inlineHelpText>Date partner went active in the program</inlineHelpText>
        <label>Final Approval Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Follow_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to indicate if the Partner Agreement needs follow up action</description>
        <inlineHelpText>used to indicate if the Partner Agreement needs follow up action</inlineHelpText>
        <label>Follow Up Required</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Industries</fullName>
                </value>
                <value>
                    <fullName>Aerospace and Defense</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Biotech &amp; Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Chemical and Petroleum</fullName>
                </value>
                <value>
                    <fullName>Communication Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Communication Devices</fullName>
                </value>
                <value>
                    <fullName>Computer Electronics</fullName>
                </value>
                <value>
                    <fullName>Software and Internet</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Earth and Ocean Sciences</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                </value>
                <value>
                    <fullName>Industrial Automation and Mach</fullName>
                </value>
                <value>
                    <fullName>Instrumentation</fullName>
                </value>
                <value>
                    <fullName>Metals, Materials and Mining</fullName>
                </value>
                <value>
                    <fullName>Pulp and Paper</fullName>
                </value>
                <value>
                    <fullName>Rail Ships and other Transport</fullName>
                </value>
                <value>
                    <fullName>Semiconductor</fullName>
                </value>
                <value>
                    <fullName>Technical Svcs &amp; Consulting</fullName>
                </value>
                <value>
                    <fullName>Utilities and Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Interface_Type__c</fullName>
        <label>Interface Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MATLAB Toolbox/Application</fullName>
                </value>
                <value>
                    <fullName>MATLAB Interface</fullName>
                </value>
                <value>
                    <fullName>Simulink Blockset/Application</fullName>
                </value>
                <value>
                    <fullName>Simulink Interface</fullName>
                </value>
                <value>
                    <fullName>Code Generation Target</fullName>
                </value>
                <value>
                    <fullName>Data Acquisition Tbox Adapter</fullName>
                </value>
                <value>
                    <fullName>Database Connectivity</fullName>
                </value>
                <value>
                    <fullName>Datafeed Toolbox Data Service</fullName>
                </value>
                <value>
                    <fullName>Image Acquisition Tbox Adapter</fullName>
                </value>
                <value>
                    <fullName>Instrument Control Tbox Driver</fullName>
                </value>
                <value>
                    <fullName>Parallel Computing Scheduler</fullName>
                </value>
                <value>
                    <fullName>Polyspace Interface</fullName>
                </value>
                <value>
                    <fullName>Real-Time Windows Tgt Driver</fullName>
                </value>
                <value>
                    <fullName>Requirements Mgmt Interface</fullName>
                </value>
                <value>
                    <fullName>xPC Target Driver/System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Last_Action_Date__c</fullName>
        <description>Capture the date of the last action taken</description>
        <inlineHelpText>Capture the date of the last action taken</inlineHelpText>
        <label>Last Action Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>License_Discount__c</fullName>
        <description>to keep notes about th elicense disounts and other Partner related license notes</description>
        <label>License Discount Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>License_Discounts_Remaining__c</fullName>
        <description>counts partner benefit records of type license discount filtered by 'unused' checkbox'</description>
        <label>License Discounts Remaining</label>
        <summaryFilterItems>
            <field>Partner_Benefits__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>License Discount</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Partner_Benefits__c.Unused_Benefit__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Partner_Benefits__c.Discount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Partner_Benefits__c.Partner_Agreement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>MW_Focal_Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to contact, filtered on employee flag</description>
        <inlineHelpText>Lookup to contact, filtered to only show MathWorks employees</inlineHelpText>
        <label>MW Focal Point</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Contacts are filtered to only show MathWorks employees</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Partner Agreements</relationshipLabel>
        <relationshipName>Partner_Agreements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>New_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Message</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <description>Used to capture notes and other information about the agreement.</description>
        <inlineHelpText>Used to capture notes and other information about the agreement.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Parent_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture the number of the parent agreement (if any)</description>
        <inlineHelpText>Lookup field to a parent agreement</inlineHelpText>
        <label>Parent Agreement</label>
        <referenceTo>Partner_Agreement__c</referenceTo>
        <relationshipLabel>Child Agreements</relationshipLabel>
        <relationshipName>Partner_Agreements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Partner_Agreement_Name__c</fullName>
        <description>Used to capture the full name of a partners product/service</description>
        <inlineHelpText>Used to capture the full name of a partners product/service</inlineHelpText>
        <label>Partner Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Pre_Product_Response__c</fullName>
        <description>URL to view the Pre-Product Survey</description>
        <inlineHelpText>URL to view the Pre-Product Survey</inlineHelpText>
        <label>Pre-product - Response</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Pre_Product_Response_date__c</fullName>
        <description>The date that survey was received back</description>
        <inlineHelpText>The date that survey was received back</inlineHelpText>
        <label>Pre-product - Response date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Pre_Product_Status__c</fullName>
        <description>Track the progress of a survey</description>
        <inlineHelpText>Track the progress of a survey</inlineHelpText>
        <label>Pre-product - Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Pre_Product_sent_date__c</fullName>
        <description>the date the Pre-Product Survey was last sent</description>
        <inlineHelpText>the date the Pre-Product Survey was last sent</inlineHelpText>
        <label>Pre-product - Sent date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Pre_product_no_response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the Customer did nto respond to the Pre-Product Survey</description>
        <inlineHelpText>Checked when the Customer did nto respond to the Pre-Product Survey</inlineHelpText>
        <label>Pre-product - No response</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Pre_product_send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check box that indicates that the Pre-Product Survey should be auto sent</description>
        <inlineHelpText>When checked, an email will be sent to the Contact that will include the Pre-Product Survey link</inlineHelpText>
        <label>Pre-product - Send</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to identify the primary contact on an agreement</description>
        <inlineHelpText>used to identify the primary contact on an agreement</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Agreements (Primary Contact)</relationshipLabel>
        <relationshipName>Partner_Agreement_Primary_Contact</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Primary_Office__c</fullName>
        <description>Standard list of MW offices</description>
        <label>Primary Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MathWorks Australia</fullName>
                </value>
                <value>
                    <fullName>MathWorks China</fullName>
                </value>
                <value>
                    <fullName>MathWorks France</fullName>
                </value>
                <value>
                    <fullName>MathWorks Germany</fullName>
                </value>
                <value>
                    <fullName>MathWorks India</fullName>
                </value>
                <value>
                    <fullName>MathWorks Italy</fullName>
                </value>
                <value>
                    <fullName>MathWorks Japan</fullName>
                </value>
                <value>
                    <fullName>MathWorks Korea</fullName>
                </value>
                <value>
                    <fullName>MathWorks Natick</fullName>
                </value>
                <value>
                    <fullName>MathWorks Netherlands</fullName>
                </value>
                <value>
                    <fullName>MathWorks Nordic</fullName>
                </value>
                <value>
                    <fullName>MathWorks Spain</fullName>
                </value>
                <value>
                    <fullName>MathWorks Switzerland</fullName>
                </value>
                <value>
                    <fullName>MathWorks UK</fullName>
                </value>
                <value>
                    <fullName>MathWorks Worldwide</fullName>
                </value>
                <value>
                    <fullName>Natick - AMER</fullName>
                </value>
                <value>
                    <fullName>Natick - APAC</fullName>
                </value>
                <value>
                    <fullName>Natick - EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Prod_Svc_Type__c</fullName>
        <label>Prod/Svc Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cameras &amp; Frame Grabbers</fullName>
                </value>
                <value>
                    <fullName>Data Acquisition Systems</fullName>
                </value>
                <value>
                    <fullName>Data Analysis Tools</fullName>
                </value>
                <value>
                    <fullName>Databases and Datafeeds</fullName>
                </value>
                <value>
                    <fullName>Documentation &amp; Report Tools</fullName>
                </value>
                <value>
                    <fullName>Embedded HW - MCU, DSP, FPGA</fullName>
                </value>
                <value>
                    <fullName>Embedded SW - Tools, IDE, RTOS</fullName>
                </value>
                <value>
                    <fullName>HPC Platforms &amp; Schedulers</fullName>
                </value>
                <value>
                    <fullName>Industrial Controllers &amp; PLCs</fullName>
                </value>
                <value>
                    <fullName>Lab Experiments</fullName>
                </value>
                <value>
                    <fullName>Lifecycle Management Software</fullName>
                </value>
                <value>
                    <fullName>Modeling and Simulation Tools</fullName>
                </value>
                <value>
                    <fullName>Network Protocols</fullName>
                </value>
                <value>
                    <fullName>Rapid Prototyping &amp; HIL System</fullName>
                </value>
                <value>
                    <fullName>Robotics Systems</fullName>
                </value>
                <value>
                    <fullName>Test Instruments</fullName>
                </value>
                <value>
                    <fullName>Verification &amp; Validation Tool</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>System Integration Services</fullName>
                </value>
                <value>
                    <fullName>Training Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Qualifying_License_Number__c</fullName>
        <description>Used to capture the license number of the qualifying license for the application</description>
        <inlineHelpText>Used to capture the license number of the qualifying license for the application</inlineHelpText>
        <label>Qualifying License Number</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Receive_Time_of_Last_Email__c</fullName>
        <description>The day / time when the last email was received.</description>
        <label>Receive Time of Last Email</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Co-opetition</fullName>
                </value>
                <value>
                    <fullName>Company Co-opetition</fullName>
                </value>
                <value>
                    <fullName>Complementary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>SSL_Last_Completed__c</fullName>
        <description>Date the SSL Survey was completed</description>
        <label>SSL Last Completed</label>
        <type>Date</type>
    </fields><fields>
        <fullName>SSL_Usage_No_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the Customer did not respond to the SSL Usage Survey</description>
        <inlineHelpText>Checked when the Customer did not respond to the SSL Usage Survey</inlineHelpText>
        <label>SSL Usage - No Response</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>SSL_Usage_Response_Date__c</fullName>
        <description>The date that survey was received back</description>
        <inlineHelpText>The date that survey was received back</inlineHelpText>
        <label>SSL Usage - Response Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>SSL_Usage_Response__c</fullName>
        <description>URL to view the SSL Usage Survey</description>
        <inlineHelpText>URL to view the SSL Usage Survey</inlineHelpText>
        <label>SSL Usage - Response</label>
        <type>Url</type>
    </fields><fields>
        <fullName>SSL_Usage_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box that indicates that the SSL Usage Survey should be auto sent</description>
        <inlineHelpText>When checked, an email will be sent to the Contact that will include the SSL Usage Survey link</inlineHelpText>
        <label>SSL Usage - Send</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>SSL_Usage_Sent_Date__c</fullName>
        <description>The date the SSL Usage Survey was last sent</description>
        <inlineHelpText>The date the SSL Usage Survey was last sent</inlineHelpText>
        <label>SSL Usage - Sent Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>SSL_Usage_Status__c</fullName>
        <description>Track the progress of a received Status</description>
        <inlineHelpText>Track the progress of a received Status</inlineHelpText>
        <label>SSL Usage - Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Siebel_Agreement_Number__c</fullName>
        <description>Siebel agreement number, differs from Siebel ID.  This is not meant to be an external ID</description>
        <inlineHelpText>Siebel agreement number, differs from Siebel ID.  This is not meant to be an external ID</inlineHelpText>
        <label>Siebel Agreement Number</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Siebel_ID__c</fullName>
        <description>Used to capture legacy agreement number from Siebel Agreements.  This field may be referenced for email handling purposes.</description>
        <inlineHelpText>Used to capture legacy agreement number from Siebel Agreements.  This field may be referenced for email handling purposes.</inlineHelpText>
        <label>Siebel ID</label>
        <length>15</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Deployment</fullName>
                </value>
                <value>
                    <fullName>Code Generation Target</fullName>
                </value>
                <value>
                    <fullName>Data Analysis/model, Alg devel</fullName>
                </value>
                <value>
                    <fullName>Data Import or Acquisition</fullName>
                </value>
                <value>
                    <fullName>Modeling and Simulation</fullName>
                </value>
                <value>
                    <fullName>Process Support</fullName>
                </value>
                <value>
                    <fullName>Test, Verification, and Tuning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <description>Date application was recieved</description>
        <inlineHelpText>Represents the date the application for the agreement was recieved</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Status_Action__c</fullName>
        <description>allows user to put in the next status action of the Agreement</description>
        <label>Status Action</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Status_Age__c</fullName>
        <formula>ROUND((Now() - Agreement_Status_Updated__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Status_Date__c</fullName>
        <description>Allows user to input the next action date of the agreement</description>
        <label>Status Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Status_Updated_to_Active__c</fullName>
        <description>Date when the Status was last changed to Active*</description>
        <label>Status Updated to Active</label>
        <type>DateTime</type>
    </fields>    </listViews></CustomObject>